- fixed blur effects on mobile - cleaned up CSS file

--- a/main.css
+++ b/main.css
@@ -1,6 +1,5 @@
 body, html {
     height: 100%;
-    
 }
 
 body {
@@ -15,9 +14,9 @@ body {
     font-family: "Roboto", sans-serif;
 }
   
-  * {
+* {
     box-sizing: border-box;
-  }
+}
 
 .container {
     position:absolute;
@@ -30,7 +29,7 @@ body {
     align-items: center;
     padding-inline: 30px;
     backdrop-filter: blur(100px);
-
+    -webkit-backdrop-filter: blur(100px);
     border-radius: 25px;
     -webkit-box-shadow: 0px 7px 20px 2px rgba(0,0,0,0.25); 
     box-shadow: 0px 7px 20px 2px rgba(0,0,0,0.25);
@@ -71,13 +70,11 @@ body {
     box-sizing: border-box;
     border: none;
     border-bottom: 2px solid white;
-    
     background-color: rgba(255, 255, 255, 0);
     color: white;
     font-family: "Cutive Mono", monospace;
     font-weight: bold;
     font-size: 20px;
-
     transition-duration: 0.4s;
 }
 
@@ -99,14 +96,12 @@ input::-webkit-inner-spin-button {
 }
 
 .bg-image{
-    /* Full height */
     height: 100%;
-
-    /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     backdrop-filter: blur(30px);
+    -webkit-backdrop-filter: blur(30px);
 }
 
 .button1 {
@@ -115,12 +110,10 @@ input::-webkit-inner-spin-button {
     width: 40%;
     display: inline;
     text-align: center;
-
     background-color: rgba(255, 255, 255, 0);
     color: white;
     border: 2px solid white;
     border-radius: 12px;
-
     transition-duration: 0.2s;
     font-size: 12pt;
     cursor:pointer;
